--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/datatables/data-tables.bootstrap4.min.css">
   <link rel="stylesheet" href="assets/as-pie-progress/css/progress.min.css">
-  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -41,11 +42,11 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="http://www.mrcodingroom.byethost7.com/wp/">
+                    <a href="#top">
                         <img src="assets/images/drawing-122x122.png" alt="MRcoding筆記" title="MRcoding筆記" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-5" href="https://mobirise.co">MingRay's Page</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-5" href="#top">MingRay's Page</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -57,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create your own site for free</a></section><section class="testimonials5 cid-rfkNNtu5PN" id="testimonials5-8">
+<section class="engine"><a href="https://mobirise.info/k">how to develop free website</a></section><section class="testimonials5 cid-rfkNNtu5PN" id="testimonials5-8">
 
     
 
@@ -580,13 +581,16 @@
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/dropdown/js/script.min.js"></script>
+  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/datatables/jquery.data-tables.min.js"></script>
   <script src="assets/datatables/data-tables.bootstrap4.min.js"></script>
   <script src="assets/as-pie-progress/jquery-as-pie-progress.min.js"></script>
-  <script src="assets/dropdown/js/script.min.js"></script>
+  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
-</body>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i></i></a></div>
+    <input name="animation" type="hidden">
+  </body>
 </html>
