--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <div class="testimonial-photo">
                             <img src="assets/images/15492078-1399838673368262-7733434908436279182-n-240x241.jpg" alt="" title="">
                         </div>
-                        <p class="mbr-text mbr-fonts-style mbr-white display-7">來自台科大碩士資管系，面對充滿討站的世界<br>生活就是不斷的自我檢討，更正自己的步伐去邁向未來<br></p>
+                        <p class="mbr-text mbr-fonts-style mbr-white display-7">來自台科大碩士資管系，面對充滿挑戰的世界<br>生活就是不斷的自我檢討，更正自己的步伐去邁向未來<br></p>
                     </div>
                     <div class="card-footer">
                         <div class="mbr-author-name mbr-bold mbr-fonts-style mbr-white display-7">MingRay</div>
