create github pages

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/y">free html site templates</a></section><section class="testimonials5 cid-rfkNNtu5PN" id="testimonials5-8">
+<section class="engine"><a href="https://mobiri.se/y">html web templates</a></section><section class="testimonials5 cid-rfkNNtu5PN" id="testimonials5-8">
 
     
 
@@ -106,7 +106,7 @@
         <div class="row pt-5 mt-5">
             <div class="col-md-6 text-elements">
                 <h4 class="section-content-title pb-3 align-left mbr-fonts-style display-5">人格特質</h4>
-                <p class="section-content-text align-left mbr-fonts-style display-7">１. <strong>創造力</strong>：童年玩過無數的GBA、PS、PC遊戲，每天都幻想活在遊戲世界，幫遊戲創造人物，新增遊戲系統，平衡遊戲性，代表作：小六暑假用遊戲內建的編輯器修改出瘋迷一時（塔防遊戲），到現在依然可以在網路上抓到，甚至被免費遊戲雜誌介紹過。<br><br>2. <strong>爆發力</strong>：小時候耐力不好，跑100公尺就特別快，大學期間曾經用凌晨2點到6點趕出3000字的歷史期末論文，獲得高於平均的85分，只要我想做，我就用最大的力量把他衝完。<br><br>3. <strong>偏執度</strong>：我的BLOG經歷過5大免費空間的摧殘，重開重做約10次，精緻簡化版面也花5~6個晚上，沒有到我想要的標準，我會不爽到睡不著改到好。<br><br>4. <strong>自虐力</strong>：國小英文沒及格過，高中英文奇差無比，卻去選修英文寫作課，被國立的同學虐翻掉，上得非常痛苦，但為了精進自己的語言能力，還是硬著頭皮自選英文，因此開始覺得英文比數學、物理、化學簡單。<br><br>５. <strong>懶惰力</strong>：很最懶的那種，就是因為很懶不想花精力背跟寫無意義的事情，如果沒有寫得比別人好，我就直接用別人的資源，用最短時間，最少的力氣，達到我心中最好的結果。<br><br>興趣：運動、看電影、唱歌、RAP<br>運動：健身、籃球、游泳、跑步</p>
+                <p class="section-content-text align-left mbr-fonts-style display-7">1.&nbsp;<strong>創造力</strong>：童年玩過無數的GBA、PS、PC遊戲，每天都幻想活在遊戲世界，幫遊戲創造人物，新增遊戲系統，平衡遊戲性，代表作：小六暑假用遊戲內建的編輯器修改出瘋迷一時（塔防遊戲），到現在依然可以在網路上抓到，甚至被免費遊戲雜誌介紹過。<br><br>2. <strong>爆發力</strong>：小時候耐力不好，跑100公尺就特別快，大學期間曾經用凌晨2點到6點趕出3000字的歷史期末論文，獲得高於平均的85分，只要我想做，我就用最大的力量把他衝完。<br><br>3. <strong>偏執度</strong>：我的BLOG經歷過5大免費空間的摧殘，重開重做約10次，精緻簡化版面也花5~6個晚上，沒有到我想要的標準，我會不爽到睡不著改到好。<br><br>4. <strong>自虐力</strong>：國小英文沒及格過，高中英文奇差無比，卻去選修英文寫作課，被國立的同學虐翻掉，上得非常痛苦，但為了精進自己的語言能力，還是硬著頭皮自選英文，因此開始覺得英文比數學、物理、化學簡單。<br><br>5.&nbsp;<strong>懶惰力</strong>：很最懶的那種，就是因為很懶不想花精力背跟寫無意義的事情，如果沒有寫得比別人好，我就直接用別人的資源，用最短時間，最少的力氣，達到我心中最好的結果。<br><br>興趣：運動、看電影、唱歌、RAP<br>運動：健身、籃球、游泳、跑步</p>
             </div>
             <div class="progress_elements col-md-6">
                 <div class="progress1 pb-5">
@@ -553,7 +553,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">感謝您的來信。</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="oK7aMztFWsC3Z1YyUDNCxirXkH3/sRReOLnHl5xQ09hjte2x2jajHDTaMkTi2J7leBDB38P2AhHnXkNMGSyJh6Bj0y8uc6k7nOJ+z1Mrc37egW5NpgGELLbc7J8yYFlu" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="RUO2SLr706wKpluBC5EnOa+iUndjGsBGQzAmYwQxS1Pm7+iRFhquuHKf9PgxuqZWW8Joizy4NXC/XQ7iARH8ejfepplmm87uPK7v0Xht5gCt+WU/HUblACK5h6gUgHKo" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
